notebook refactor, logging

--- a/notebooks/data_processing_final.ipynb
+++ b/notebooks/data_processing_final.ipynb
@@ -109,10 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-02-05T13:53:09.851Z"
+     "end_time": "2020-02-05T14:09:41.404813Z",
+     "start_time": "2020-02-05T13:53:09.853388Z"
     }
    },
    "outputs": [
@@ -160,7 +161,46 @@
       "0\n",
       "2.3463155031204224\n",
       "48.195831298828125\n",
-      "==================== 2 ==================\n"
+      "==================== 2 ==================\n",
+      "1.5118995979428291\n",
+      "79.72128295898438\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█| 50210/50210 [01:09<00:00, 723.10it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "2.3463155031204224\n",
+      "78.78667068481445\n",
+      "==================== 3 ==================\n",
+      "1.5118995979428291\n",
+      "79.52425003051758\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█| 50210/50210 [01:10<00:00, 709.30it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "0\n",
+      "2.3463155031204224\n",
+      "78.65176010131836\n"
      ]
     }
    ],
