--- a/notebooks/model_3_efficient_net_with_mixup.ipynb
+++ b/notebooks/model_3_efficient_net_with_mixup.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T13:36:32.549599Z",
-     "start_time": "2020-02-05T13:36:32.499734Z"
+     "end_time": "2020-02-05T16:31:03.814120Z",
+     "start_time": "2020-02-05T16:31:03.747302Z"
     }
    },
    "outputs": [],
@@ -17,36 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T13:37:59.002742Z",
-     "start_time": "2020-02-05T13:37:58.878076Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<module 'torchtools' from 'C:\\\\Users\\\\CHANNO.OOCLDM\\\\AppData\\\\Local\\\\Continuum\\\\anaconda3\\\\lib\\\\site-packages\\\\torchtools\\\\__init__.py'>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torchtools"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-05T13:38:46.928664Z",
-     "start_time": "2020-02-05T13:38:46.809980Z"
+     "end_time": "2020-02-05T16:31:07.382527Z",
+     "start_time": "2020-02-05T16:31:04.547150Z"
     },
     "lines_to_end_of_cell_marker": 2
    },
@@ -54,9 +29,9 @@
    "source": [
     "import csv\n",
     "import os\n",
-    "\n",
+    "from pathlib import Path\n",
     "import numpy as np\n",
-    "import torch.optim as optima\n",
+    "import torch.optim as optim\n",
     "from efficientnet_pytorch import EfficientNet\n",
     "from torch import nn\n",
     "from torch.utils.data import Dataset, DataLoader\n",
@@ -78,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T13:39:11.023817Z",
-     "start_time": "2020-02-05T13:39:10.905357Z"
+     "end_time": "2020-02-05T16:31:07.525145Z",
+     "start_time": "2020-02-05T16:31:07.384522Z"
     }
    },
    "outputs": [],
@@ -102,25 +77,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T13:50:23.469349Z",
-     "start_time": "2020-02-05T13:50:23.310775Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "??load_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-02-05T13:57:36.819055Z",
-     "start_time": "2020-02-05T13:57:33.255564Z"
+     "end_time": "2020-02-05T16:31:11.423720Z",
+     "start_time": "2020-02-05T16:31:07.527140Z"
     }
    },
    "outputs": [
@@ -146,11 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T13:58:31.288388Z",
-     "start_time": "2020-02-05T13:58:31.170701Z"
+     "end_time": "2020-02-05T16:31:11.585285Z",
+     "start_time": "2020-02-05T16:31:11.426710Z"
     }
    },
    "outputs": [
@@ -169,7 +130,7 @@
        "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], dtype=uint8)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,11 +141,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T13:58:43.029952Z",
-     "start_time": "2020-02-05T13:58:33.917344Z"
+     "end_time": "2020-02-05T16:31:11.747845Z",
+     "start_time": "2020-02-05T16:31:11.588275Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "configs = {\n",
+    "    \"model\": \"efficient 0\",\n",
+    "    \"pretrain\": False,\n",
+    "    \"head_info\": \"1 fc\",\n",
+    "    \"input_size\": \"224X224\",\n",
+    "    \"optimizer\": \"adam\",\n",
+    "    \"image_processing\": \"mixup, cutmix\",\n",
+    "    \"cutmix/mixup alpha\": 0.1,\n",
+    "    'mixup_alpha' : 0.1,\n",
+    "    'batch_size': 64,\n",
+    "    'num_workers': 6,\n",
+    "    'pin_memory': True,\n",
+    "    'n_epoch': 120,\n",
+    "    'n_splits': 5,\n",
+    "    'random_seed': 2020,\n",
+    "    'mix_precision': False\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-05T16:31:21.215555Z",
+     "start_time": "2020-02-05T16:31:11.750837Z"
     }
    },
    "outputs": [
@@ -197,15 +188,13 @@
     }
    ],
    "source": [
-    "batch_size = 64\n",
-    "num_workers = 6\n",
-    "pin_memory = True\n",
-    "n_epoch = 120\n",
-    "\n",
-    "n_splits = 5\n",
-    "random_seed = 2020\n",
-    "\n",
-    "mixed_precision = False\n",
+    "batch_size = configs['batch_size']\n",
+    "num_workers = configs['num_workers'] \n",
+    "pin_memory = configs['pin_memory']\n",
+    "n_epoch = configs['n_epoch']\n",
+    "n_splits = configs['n_splits']\n",
+    "random_seed = configs['random_seed']\n",
+    "mixed_precision = configs['mix_precision']\n",
     "\n",
     "train_idx_list, test_idx_list = generate_stratified_k_fold_index(\n",
     "    image_data, label_data, n_splits, random_seed\n",
@@ -270,33 +259,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-05T16:31:26.207593Z",
+     "start_time": "2020-02-05T16:31:21.216548Z"
+    },
+    "run_control": {
+     "marked": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                Logging results to <a href=\"https://wandb.com\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
+       "                Project page: <a href=\"https://app.wandb.ai/noklam/bengali\" target=\"_blank\">https://app.wandb.ai/noklam/bengali</a><br/>\n",
+       "                Run page: <a href=\"https://app.wandb.ai/noklam/bengali/runs/t99x1pjl\" target=\"_blank\">https://app.wandb.ai/noklam/bengali/runs/t99x1pjl</a><br/>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error generating diff: Command '['git', 'diff', '--submodule=diff', 'HEAD']' returned non-zero exit status 128.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import wandb\n",
+    "os.environ['WANDB_NOTEBOOK_NAME'] = 'model_3_efficient_net'\n",
+    "\n",
+    "# WandB – Initialize a new run\n",
+    "# use your own user/project name\n",
+    "wandb.init(entity=\"noklam\", project='bengali')\n",
+    "# Re-run the model without restarting the runtime, unnecessary after our next release\n",
+    "wandb.watch_called = False\n",
+    "\n",
+    "wandb.config = configs"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-02-05T13:59:04.723Z"
-    },
-    "scrolled": true
+     "start_time": "2020-02-05T16:32:45.000Z"
+    }
    },
    "outputs": [
     {
@@ -313,7 +331,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1c218a4f8884ceaa24a1ce4884964c4",
+       "model_id": "66b6b5e4d47f454eba5f4d5fad0d37d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -331,20 +349,57 @@
       "C:\\Users\\CHANNO.OOCLDM\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\torch\\cuda\\nccl.py:24: UserWarning: PyTorch is not compiled with NCCL support\n",
       "  warnings.warn('PyTorch is not compiled with NCCL support')\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error generating diff: Command '['git', 'diff', '--submodule=diff', 'HEAD']' returned non-zero exit status 128.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Loss: 5.6899, root_acc: 0.1283, vowel_acc: 0.4780, consonant_acc: 0.6525, combined_acc: 0.3468\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3c52e386a18e48ca91921a8323f6ded7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=83), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "pretrain = False\n",
+    "pretrain = configs['pretrain']\n",
     "# eff_version = \"4\"\n",
-    "mixup_alpha = 0.1\n",
+    "mixup_alpha = configs['mixup_alpha']\n",
     "\n",
     "for i, (train_idx, valid_idx) in enumerate(zip(train_idx_list, test_idx_list)):\n",
     "    if i != 0:\n",
     "        continue\n",
     "    print(f\"Training fold {i}\")\n",
-    "    \n",
-    "    # create model \n",
-    "    # eff_b0 = EfficientNet_grapheme(eff_version, pretrain)    \n",
+    "    MODEL_DIR = Path(f\"../model_weights/eff_0_with_mixup_cutmix_alpha_0.1/fold_{i}\")\n",
+    "    MODEL_DIR.mkdir(exist_ok=True)\n",
+    "\n",
+    "    # create model\n",
+    "    # eff_b0 = EfficientNet_grapheme(eff_version, pretrain)\n",
     "    eff_b0 = EfficientNet_0(pretrain)\n",
     "\n",
     "    #########################\n",
@@ -354,23 +409,24 @@
     "        eff_b0 = apex.parallel.DistributedDataParallel(eff_b0)\n",
     "        eff_b0.to(\"cuda\")\n",
     "        eff_b0 = torch.nn.parallel.DistributedDataParallel(\n",
-    "            eff_b0, device_ids=[0,1], output_device=0\n",
+    "            eff_b0, device_ids=[0, 1], output_device=0\n",
     "        )\n",
-    "        eff_b0, optimizer_ft = amp.initialize(eff_b0, optimizer_ft, opt_level=\"O1\")\n",
+    "        eff_b0, optimizer_ft = amp.initialize(\n",
+    "            eff_b0, optimizer_ft, opt_level=\"O1\")\n",
     "    else:\n",
     "        eff_b0.to(\"cuda\")\n",
     "        eff_b0 = nn.DataParallel(eff_b0)\n",
-    "        \n",
+    "\n",
     "    # create optimizer\n",
     "    # optimizer_ft = RangerLars(eff_b0.parameters())\n",
     "    optimizer_ft = optim.Adam(eff_b0.parameters(), weight_decay=1e-5)\n",
     "\n",
     "    # create data loader\n",
     "    data_loaders = create_dataloaders(\n",
-    "        image_data, name_data, label_data, train_idx, valid_idx, \n",
+    "        image_data, name_data, label_data, train_idx, valid_idx,\n",
     "        data_transforms, batch_size, num_workers, pin_memory\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # create lr scheduler\n",
     "    # exp_lr_scheduler = lr_scheduler.ReduceLROnPlateau(\n",
     "    #     optimizer_ft, factor=0.5, patience=5,\n",
@@ -380,20 +436,23 @@
     "#     )\n",
     "#     # one_cycle_lr_scheduler = OneCycleLR(\n",
     "#     #     optimizer_ft, max_lr=0.01, steps_per_epoch=len(data_loaders[\"train\"]), epochs=n_epoch\n",
-    "#     # )   \n",
-    "    \n",
+    "#     # )\n",
+    "\n",
     "#     scheduler_warmup = GradualWarmupScheduler(\n",
     "#         optimizer_ft, multiplier=1, total_epoch=10, after_scheduler=cos_lr_scheduler\n",
     "#     )\n",
     "\n",
-    "    \n",
+    "        \n",
+    "    # Add W&B logging\n",
+    "#     wandb.watch(eff_b0)\n",
+    "\n",
     "    callbacks = {}\n",
     "\n",
     "    callbacks = train_model(\n",
     "        eff_b0, optimizer_ft, data_loaders,\n",
     "        mixed_precision, callbacks, mixup_alpha, num_epochs=n_epoch,\n",
-    "        epoch_scheduler=None, save_dir=f\"../model_weights/eff_0_with_mixup_cutmix_alpha_0.1/fold_{i}\"\n",
-    "    )\n"
+    "        epoch_scheduler=None, save_dir=MODEL_DIR\n",
+    "    )"
    ]
   },
   {
@@ -401,32 +460,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-02-05T13:59:12.457Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "configs = {\n",
-    "    \"model\": \"efficient 0\",\n",
-    "    \"pretrain\": pretrain,\n",
-    "    \"head_info\": \"1 fc\",\n",
-    "    \"input_size\": \"224X224\",\n",
-    "    \"optimizer\": \"adam\",\n",
-    "    \"n_fold\": n_splits,\n",
-    "    \"split_seed\": random_seed,\n",
-    "    \"batch_size\": batch_size,\n",
-    "    \"epoch\": n_epoch,\n",
-    "    \"mixed_precision\": mixed_precision,\n",
-    "    \"image_processing\": \"mixup, cutmix\",\n",
-    "    \"cutmix/mixup alpha\": 0.1,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
+     "end_time": "2020-02-05T14:03:39.583765Z",
      "start_time": "2020-02-05T13:59:12.807Z"
     },
     "lines_to_next_cell": 2
@@ -448,6 +482,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2020-02-05T14:03:39.584761Z",
      "start_time": "2020-02-05T13:59:13.332Z"
     },
     "lines_to_next_cell": 0
@@ -487,6 +522,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:light"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
