add timestamp for grouping fold

--- a/notebooks/model_3_efficient_net_with_mixup.ipynb
+++ b/notebooks/model_3_efficient_net_with_mixup.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T16:31:03.814120Z",
-     "start_time": "2020-02-05T16:31:03.747302Z"
+     "end_time": "2020-02-05T16:46:22.479252Z",
+     "start_time": "2020-02-05T16:46:22.427391Z"
     }
    },
    "outputs": [],
@@ -20,8 +20,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T16:31:07.382527Z",
-     "start_time": "2020-02-05T16:31:04.547150Z"
+     "end_time": "2020-02-05T16:46:25.389628Z",
+     "start_time": "2020-02-05T16:46:22.481247Z"
     },
     "lines_to_end_of_cell_marker": 2
    },
@@ -56,8 +56,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T16:31:07.525145Z",
-     "start_time": "2020-02-05T16:31:07.384522Z"
+     "end_time": "2020-02-05T16:46:25.525785Z",
+     "start_time": "2020-02-05T16:46:25.391625Z"
     }
    },
    "outputs": [],
@@ -80,8 +80,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T16:31:11.423720Z",
-     "start_time": "2020-02-05T16:31:07.527140Z"
+     "end_time": "2020-02-05T16:46:29.311833Z",
+     "start_time": "2020-02-05T16:46:25.527779Z"
     }
    },
    "outputs": [
@@ -110,8 +110,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T16:31:11.585285Z",
-     "start_time": "2020-02-05T16:31:11.426710Z"
+     "end_time": "2020-02-05T16:46:29.552187Z",
+     "start_time": "2020-02-05T16:46:29.313828Z"
     }
    },
    "outputs": [
@@ -144,8 +144,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T16:31:11.747845Z",
-     "start_time": "2020-02-05T16:31:11.588275Z"
+     "end_time": "2020-02-05T16:46:29.694804Z",
+     "start_time": "2020-02-05T16:46:29.554183Z"
     }
    },
    "outputs": [],
@@ -174,8 +174,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T16:31:21.215555Z",
-     "start_time": "2020-02-05T16:31:11.750837Z"
+     "end_time": "2020-02-05T16:46:38.988027Z",
+     "start_time": "2020-02-05T16:46:29.696798Z"
     }
    },
    "outputs": [
@@ -262,8 +262,36 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T16:31:26.207593Z",
-     "start_time": "2020-02-05T16:31:21.216548Z"
+     "end_time": "2020-02-05T16:46:39.119672Z",
+     "start_time": "2020-02-05T16:46:38.989024Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20200206_004639'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "now = datetime.now()\n",
+    "current_time = now.strftime(\"%Y%m%d_%H%M%S\")\n",
+    "current_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-02-05T16:46:39.339083Z",
+     "start_time": "2020-02-05T16:46:39.121667Z"
     },
     "run_control": {
      "marked": true
@@ -271,12 +299,43 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "env: WANDB_NOTEBOOK_NAME=model_3_efficient_net\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import wandb\n",
+    "# os.environ['WANDB_NOTEBOOK_NAME'] = 'model_3_efficient_net'\n",
+    "%env WANDB_NOTEBOOK_NAME=model_3_efficient_net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-02-05T16:46:22.432Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training fold 0\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "\n",
        "                Logging results to <a href=\"https://wandb.com\" target=\"_blank\">Weights & Biases</a> <a href=\"https://docs.wandb.com/integrations/jupyter.html\" target=\"_blank\">(Documentation)</a>.<br/>\n",
        "                Project page: <a href=\"https://app.wandb.ai/noklam/bengali\" target=\"_blank\">https://app.wandb.ai/noklam/bengali</a><br/>\n",
-       "                Run page: <a href=\"https://app.wandb.ai/noklam/bengali/runs/t99x1pjl\" target=\"_blank\">https://app.wandb.ai/noklam/bengali/runs/t99x1pjl</a><br/>\n",
+       "                Run page: <a href=\"https://app.wandb.ai/noklam/bengali/runs/kvmjjgzr\" target=\"_blank\">https://app.wandb.ai/noklam/bengali/runs/kvmjjgzr</a><br/>\n",
        "            "
       ],
       "text/plain": [
@@ -292,36 +351,11 @@
      "text": [
       "Error generating diff: Command '['git', 'diff', '--submodule=diff', 'HEAD']' returned non-zero exit status 128.\n"
      ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import wandb\n",
-    "os.environ['WANDB_NOTEBOOK_NAME'] = 'model_3_efficient_net'\n",
-    "\n",
-    "# WandB – Initialize a new run\n",
-    "# use your own user/project name\n",
-    "wandb.init(entity=\"noklam\", project='bengali')\n",
-    "# Re-run the model without restarting the runtime, unnecessary after our next release\n",
-    "wandb.watch_called = False\n",
-    "\n",
-    "wandb.config = configs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2020-02-05T16:32:45.000Z"
-    }
-   },
-   "outputs": [
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training fold 0\n",
       "Creating train dataloader...\n",
       "Creating test dataloader...\n",
       "Epoch 0/119\n",
@@ -331,7 +365,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66b6b5e4d47f454eba5f4d5fad0d37d5",
+       "model_id": "8e561d017af5480a8eff59d870dbedd6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -349,41 +383,6 @@
       "C:\\Users\\CHANNO.OOCLDM\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\torch\\cuda\\nccl.py:24: UserWarning: PyTorch is not compiled with NCCL support\n",
       "  warnings.warn('PyTorch is not compiled with NCCL support')\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error generating diff: Command '['git', 'diff', '--submodule=diff', 'HEAD']' returned non-zero exit status 128.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Loss: 5.6899, root_acc: 0.1283, vowel_acc: 0.4780, consonant_acc: 0.6525, combined_acc: 0.3468\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3c52e386a18e48ca91921a8323f6ded7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=83), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -398,6 +397,13 @@
     "    MODEL_DIR = Path(f\"../model_weights/eff_0_with_mixup_cutmix_alpha_0.1/fold_{i}\")\n",
     "    MODEL_DIR.mkdir(exist_ok=True)\n",
     "\n",
+    "    # WandB – Initialize a new run\n",
+    "    # use your own user/project name\n",
+    "    wandb.init(entity=\"noklam\", project='bengali',config=configs, group=current_time)\n",
+    "    # Re-run the model without restarting the runtime, unnecessary after our next release\n",
+    "    wandb.watch_called = False\n",
+    "\n",
+    "    \n",
     "    # create model\n",
     "    # eff_b0 = EfficientNet_grapheme(eff_version, pretrain)\n",
     "    eff_b0 = EfficientNet_0(pretrain)\n",
@@ -460,8 +466,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T14:03:39.583765Z",
-     "start_time": "2020-02-05T13:59:12.807Z"
+     "start_time": "2020-02-05T16:46:22.434Z"
     },
     "lines_to_next_cell": 2
    },
@@ -482,8 +487,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-02-05T14:03:39.584761Z",
-     "start_time": "2020-02-05T13:59:13.332Z"
+     "start_time": "2020-02-05T16:46:22.435Z"
     },
     "lines_to_next_cell": 0
    },
